# botelf_ws

./: .gitignore  README.md
bxi_hw_release/share/description/model/xml/bot_elf/: bot_elf.xml  bot_elf_ankle.xml  bot_elf_collision.xml
src/bxi_controller/: CMakeLists.txt  package.xml
src/bxi_controller/config/: init_state.yaml  keyboard_config.yaml  rl_controller.yaml  rl_wbc.yaml
src/bxi_controller/config/model/: mimic_controller.yaml
src/bxi_controller/config/model/bot_elf/mjcf/: bot_elf.xml
src/bxi_controller/config/model/bot_elf/urdf/: bot_elf_ess_collision_fixarm.urdf  bot_elf_new.urdf
src/bxi_controller/config/model/elf25/urdf/: elf25.urdf
src/bxi_controller/config/model/exported/: policy_0.jit  policy_0.meta.yaml  policy_0.onnx  robot_config.yaml
src/bxi_controller/config/model/exported_1/: elf1_alip_guide.meta.yaml  policy_0.onnx  robot_config.yaml
src/bxi_controller/conifg/model/: mimic_controller.yaml
src/bxi_controller/conifg/model/bot_elf/mjcf/: bot_elf_collision.xml  bot_elf_fixarm.xml
src/bxi_controller/conifg/model/bot_elf/urdf/: bot_elf.urdf  bot_elf_ess_collision.urdf  bot_elf_fixarm.urdf  bot_elf_fixarm_no_contact.urdf
src/bxi_controller/include/control/: RL_Controller.h  RL_WBC.h  RobotState.h  rl_controller.h
src/bxi_controller/include/utils/: cfgutils.h  math_tools.h  ovutils.h  scheduler.h
src/bxi_controller/launch/: remote_conroller_launch.py  rl_hw_launch.py  rl_sim_launch.py
src/bxi_controller/models/dh_rl_model/: walk_policy_0.onnx  walk_policy_1.onnx  walk_policy_2.onnx
src/bxi_controller/models/rl_model/: elf1_alip_guide.onnx  policy_0.onnx  policy_111.onnx  policy_4.onnx
src/bxi_controller/models/wbc_model/: policy_3.onnx
src/bxi_controller/src/: rl_main.cpp  rl_wbc_main.cpp  test.cpp
src/bxi_controller/src/control/: RL_Controller.cpp  RL_WBC.cpp  rl_controller.cpp
src/bxi_controller/src/utils/: keyboard_node.cpp  math_tools.cpp
src/bxi_visualization/: CMakeLists.txt  package.xml
src/bxi_visualization/config/: elf25_config.rviz
src/bxi_visualization/launch/: bot_elf_launch.py  elf25_launch.py  rosbag_play_launch.py
src/bxi_visualization/model/urdf/bot_elf/urdf/: bot_elf.urdf
src/bxi_visualization/scripts/: rosbag_controller.py
src/bxi_visualization/src/: odom2tf.cpp
src/fr_control/: CMakeLists.txt  config.json  package.xml
src/fr_control/include/control/: RobotController.h
src/fr_control/launch/: fr_launch.py  fr_launch_hw.py
src/fr_control/models/: origin.onnx  origin_Lz.onnx  rand.onnx  rand_Lz.onnx  res.onnx  trimesh.onnx  trimesh_z.onnx
src/fr_control/src/: main.cpp
src/fr_control/src/control/: RobotController.cpp
src/fr_control/src/utils/: keyboard_node.cpp  math_tools.cpp  remote_controller_node.cpp
src/ros2_test/: CMakeLists.txt  package.xml
src/ros2_test/src/: estimator_debug.cpp  mpc_test.cpp  test1.cpp  test2.cpp  test3.cpp  test4.cpp
